--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.1.0",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-image-picker": "~14.7.1",
